--- a/src/main/resources/assets/givemehats/lang/en_us.json
+++ b/src/main/resources/assets/givemehats/lang/en_us.json
@@ -19,6 +19,7 @@
     "item.givemehats.tater_hat": "Lil Tater",
     "item.givemehats.bunny_space_helmet": "Space Helmet",
     "item.givemehats.irish_hat": "Leprechaun Hat",
+    "item.givemehats.santa_hat": "Santa Hat",
     "itemGroup.givemehats.hats_tab": "Give Me Hats!",
 
     "text.bowler_hat":"Passive: Brisk Wal..Run",
