--- a/src/main/resources/assets/givemehats/lang/uk_ua.json
+++ b/src/main/resources/assets/givemehats/lang/uk_ua.json
@@ -1,11 +1,11 @@
 {
     "item.givemehats.bowler_hat": "Котілок",
     "item.givemehats.top_hat": "Циліндр",
-    "item.givemehats.topest_hat": "Tip-Top шляпа",
+    "item.givemehats.topest_hat": "Tip-Top Циліндр",
     "item.givemehats.sailor_hat": "Безкозирка",
     "item.givemehats.slime_hat": "Шляпа із слайма",
     "item.givemehats.bunny_ears": "Кролячі вуха",
-    "item.givemehats.floating_hat": "Шляпа",
+    "item.givemehats.floating_hat": "Шляпа вболівальника",
     "item.givemehats.fez_hat": "Феска",
     "item.givemehats.deerstalker_hat": "Шляпа мисливця",
     "item.givemehats.cat_ears": "Котячі вуха",
@@ -13,12 +13,13 @@
     "item.givemehats.electric_mouse_ears": "Вуха 'Електрична миша'",
     "item.givemehats.crown": "Корона",
     "item.givemehats.cowboy_hat": "Ковбойська шляпа",
-    "item.givemehats.russian_hat": "Русска шляпа",
+    "item.givemehats.russian_hat": "Шапка-вушанка",
     "item.givemehats.strider_hat": "Dome of the Strider",
-    "item.givemehats.woolrus_hat": "The Woolrus",
+    "item.givemehats.woolrus_hat": "Морж",
     "item.givemehats.tater_hat": "Lil Tater",
     "item.givemehats.bunny_space_helmet": "Космічний шолом",
     "item.givemehats.irish_hat": "Шляпа лепрекона",
+    "item.givemehats.santa_hat": "Шапка Санти",
     "itemGroup.givemehats.hats_tab": "Give Me Hats!",
 
     "text.bowler_hat":"Пасивний: Швидка ходьба..Біг",
@@ -38,7 +39,7 @@
     "text.sailorhat": "Пасивний: всі твої моря належать нам",
     "text.santahat": "Пасивний: Хо-Хо-Хо!",
     "text.slimehat": "Пасивний: Бульк!",
-    "text.striderhat": "Пасивний: Lavasion",
+    "text.striderhat": "Пасивний: Лавасьйон",
     "text.topesthat": "Пасивний: Самий чудернацький із всіх",
     "text.tophat": "Пасивний: вишуканість",
     "text.woolrushat":"Пасивний: walruswalruswalrus"
