--- a/src/main/resources/assets/givemehats/lang/ru_ru.json
+++ b/src/main/resources/assets/givemehats/lang/ru_ru.json
@@ -1,11 +1,11 @@
 {
     "item.givemehats.bowler_hat": "Котелок",
     "item.givemehats.top_hat": "Цилиндр",
-    "item.givemehats.topest_hat": "Tip-Top шляпа",
+    "item.givemehats.topest_hat": "Tip-Top Цилиндр",
     "item.givemehats.sailor_hat": "Безкозырка",
     "item.givemehats.slime_hat": "Шляпа из слизи",
     "item.givemehats.bunny_ears": "Кроличьи уши",
-    "item.givemehats.floating_hat": "Шляпа",
+    "item.givemehats.floating_hat": "Шляпа болейщика",
     "item.givemehats.fez_hat": "Феска",
     "item.givemehats.deerstalker_hat": "Шляпа охотника",
     "item.givemehats.cat_ears": "Кошачьи уши",
@@ -13,12 +13,13 @@
     "item.givemehats.electric_mouse_ears": "Уши 'Электрическая мышь'",
     "item.givemehats.crown": "Корона",
     "item.givemehats.cowboy_hat": "Ковбойская шляпа",
-    "item.givemehats.russian_hat": "Русская шляпа",
+    "item.givemehats.russian_hat": "Шапка-ушанка",
     "item.givemehats.strider_hat": "Dome of the Strider",
-    "item.givemehats.woolrus_hat": "The Woolrus",
+    "item.givemehats.woolrus_hat": "Морж",
     "item.givemehats.tater_hat": "Lil Tater",
     "item.givemehats.bunny_space_helmet": "Космический шлем",
     "item.givemehats.irish_hat": "Шляпа лепрекона",
+    "item.givemehats.santa_hat": "Шапка Санты",
     "itemGroup.givemehats.hats_tab": "Give Me Hats!",
 
     "text.bowler_hat":"Пассивный: Быстрая ходьба..Бег",
@@ -38,7 +39,7 @@
     "text.sailorhat": "Пассивный: все твои моря принадлежат нам",
     "text.santahat": "Пассивный: Хо-Хо-Хо!",
     "text.slimehat": "Пассивный: Бульк!",
-    "text.striderhat": "Пассивный: Lavasion",
+    "text.striderhat": "Пассивный: Лавасьен",
     "text.topesthat": "Пассивный: Самый причудливый из всех",
     "text.tophat": "Пассивный: изысканность",
     "text.woolrushat":"Пассивный: walruswalruswalrus"
