Updated translation ru, ua

--- a/src/main/resources/assets/givemehats/lang/uk_ua.json
+++ b/src/main/resources/assets/givemehats/lang/uk_ua.json
@@ -19,7 +19,7 @@
     "item.givemehats.tater_hat": "Lil Tater",
     "item.givemehats.bunny_space_helmet": "Космічний шолом",
     "item.givemehats.irish_hat": "Шляпа лепрекона",
-    "item.givemehats.santa_hat": "Шапка Санти",,
+    "item.givemehats.santa_hat": "Шапка Санти",
     "item.givemehats.golem_bucket": "Відро голема",
     "item.givemehats.jojo_hat": "Шляпа Джотаро",
     "item.givemehats.wolf_ears": "Вовчі вуха",
