--- a/src/main/resources/assets/givemehats/lang/en_us.json
+++ b/src/main/resources/assets/givemehats/lang/en_us.json
@@ -10,6 +10,7 @@
     "item.givemehats.deerstalker_hat": "Deerstalker Hat",
     "item.givemehats.cat_ears": "Cat Ears",
     "item.givemehats.fox_ears": "Fox Ears",
+    "item.givemehats.santa_hat": "Santa Hat",
     "item.givemehats.electric_mouse_ears": "'Electric Mouse' Ears",
     "item.givemehats.crown": "Crown",
     "item.givemehats.cowboy_hat": "Cowboy Hat",
@@ -19,7 +20,12 @@
     "item.givemehats.tater_hat": "Lil Tater",
     "item.givemehats.bunny_space_helmet": "Space Helmet",
     "item.givemehats.irish_hat": "Leprechaun Hat",
-    "item.givemehats.santa_hat": "Santa Hat",
+    "item.givemehats.golem_bucket": "Golem Bucket",
+    "item.givemehats.jojo_hat": "Jotaro's Hat",
+    "item.givemehats.wolf_ears": "Wolf Ears",
+    "item.givemehats.witch_hat": "Witches Brim",
+    "item.givemehats.viking_hat": "Viking helmet",
+    "item.givemehats.dwarven_hat": "Dwarven Helm",
     "itemGroup.givemehats.hats_tab": "Give Me Hats!",
 
     "text.bowler_hat":"Passive: Brisk Wal..Run",
@@ -42,6 +48,12 @@
     "text.striderhat": "Passive: Lavasion",
     "text.topesthat": "Passive: Fanciest of them all",
     "text.tophat": "Passive: Fancy",
-    "text.woolrushat":"Passive: walruswalruswalrus"
+    "text.woolrushat":"Passive: walruswalruswalrus",
+    "text.golembucket": "On attacking: Can you even lift bro?",
+    "text.jojohat": "On attacking: YARE YARE DAZE (WIP)",
+    "text.wolf_ears": "On attacking: A sheep in wolves clothing?",
+    "text.witch_hat": "On attacking: bubble bubble, toil and trouble",
+    "text.viking_hat": "Passive: Viking Tenacity",
+    "text.dwarven_hat": "Passive: Mining In The Deep"
 
 }
