--- a/src/main/resources/assets/givemehats/lang/ru_ru.json
+++ b/src/main/resources/assets/givemehats/lang/ru_ru.json
@@ -24,6 +24,8 @@
     "item.givemehats.jojo_hat": "Шляпа Джотаро",
     "item.givemehats.wolf_ears": "Волчьи уши",
     "item.givemehats.witch_hat": "Шляпа ведьмы",
+    "item.givemehats.viking_hat": "Шлем викинга",
+    "item.givemehats.dwarven_hat": "Шлем дворфов",
     "itemGroup.givemehats.hats_tab": "Give Me Hats!",
 
     "text.bowler_hat":"Пассивный: Быстрая ходьба..Бег",
@@ -50,6 +52,8 @@
     "text.golembucket": "При аттаке: Сможешь ли ты поднять, бро?",
     "text.jojohat": "При аттаке: YARE YARE DAZE (WIP)",
     "text.wolf_ears": "При аттаке: Овца в волчьей шкуре?",
-    "text.witch_hat": "При аттаке: bubble bubble, toil and trouble"
+    "text.witch_hat": "При аттаке: бульк бульк, труд и неприятности",
+    "text.viking_hat": "Пассивный: Упорство викингов",
+    "text.dwarven_hat": "Пассивный: Добыча в глубине"
 
 }
