--- a/src/main/resources/assets/givemehats/lang/uk_ua.json
+++ b/src/main/resources/assets/givemehats/lang/uk_ua.json
@@ -10,6 +10,7 @@
     "item.givemehats.deerstalker_hat": "Шляпа мисливця",
     "item.givemehats.cat_ears": "Котячі вуха",
     "item.givemehats.fox_ears": "Лисячі вуха",
+    "item.givemehats.santa_hat": "Шапка Санти",
     "item.givemehats.electric_mouse_ears": "Вуха 'Електрична миша'",
     "item.givemehats.crown": "Корона",
     "item.givemehats.cowboy_hat": "Ковбойська шляпа",
@@ -19,11 +20,12 @@
     "item.givemehats.tater_hat": "Lil Tater",
     "item.givemehats.bunny_space_helmet": "Космічний шолом",
     "item.givemehats.irish_hat": "Шляпа лепрекона",
-    "item.givemehats.santa_hat": "Шапка Санти",
     "item.givemehats.golem_bucket": "Відро голема",
     "item.givemehats.jojo_hat": "Шляпа Джотаро",
     "item.givemehats.wolf_ears": "Вовчі вуха",
     "item.givemehats.witch_hat": "Шляпа відьми",
+    "item.givemehats.viking_hat": "Шолом вікінга",
+    "item.givemehats.dwarven_hat": "Шолом дворфів",
     "itemGroup.givemehats.hats_tab": "Give Me Hats!",
 
     "text.bowler_hat":"Пасивний: Швидка ходьба..Біг",
@@ -50,6 +52,8 @@
     "text.golembucket": "При атаці: Чи ти зможеш підняти, бро?",
     "text.jojohat": "При атаці: YARE YARE DAZE (WIP)",
     "text.wolf_ears": "При атаці: Овечка у вовчій шкурі?",
-    "text.witch_hat": "При атаці: bubble bubble, toil and trouble"
+    "text.witch_hat": "При атаці: бульк бульк, праця і неприємності ",
+    "text.viking_hat": "Пасивний: Завзятість вікінгів",
+    "text.dwarven_hat": "Пасивний: Видобудок в глибині"
 
 }
