--- a/src/main/resources/assets/givemehats/lang/ru_ru.json
+++ b/src/main/resources/assets/givemehats/lang/ru_ru.json
@@ -24,7 +24,7 @@
     "item.givemehats.jojo_hat": "Шляпа Джотаро",
     "item.givemehats.wolf_ears": "Волчьи уши",
     "item.givemehats.witch_hat": "Шляпа ведьмы",
-    "item.givemehats.viking_hat": "Шлем викинга",
+    "item.givemehats.viking_hat": "Шлем викингов",
     "item.givemehats.dwarven_hat": "Шлем дворфов",
     "itemGroup.givemehats.hats_tab": "Give Me Hats!",
 
