--- a/src/main/resources/assets/givemehats/lang/uk_ua.json
+++ b/src/main/resources/assets/givemehats/lang/uk_ua.json
@@ -24,7 +24,7 @@
     "item.givemehats.jojo_hat": "Шляпа Джотаро",
     "item.givemehats.wolf_ears": "Вовчі вуха",
     "item.givemehats.witch_hat": "Шляпа відьми",
-    "item.givemehats.viking_hat": "Шолом вікінга",
+    "item.givemehats.viking_hat": "Шолом вікінгів",
     "item.givemehats.dwarven_hat": "Шолом дворфів",
     "itemGroup.givemehats.hats_tab": "Give Me Hats!",
 
