--- a/src/main/resources/assets/givemehats/lang/zh_cn.json
+++ b/src/main/resources/assets/givemehats/lang/zh_cn.json
@@ -4,18 +4,54 @@
     "item.givemehats.topest_hat": "超高顶礼帽",
     "item.givemehats.sailor_hat": "水手帽",
     "item.givemehats.slime_hat": "史莱姆帽",
-    "item.givemehats.bunny_ears": "兔耳",
+    "item.givemehats.bunny_ears": "兔耳朵",
     "item.givemehats.floating_hat": "飘浮帽",
     "item.givemehats.fez_hat": "土耳其毡帽",
     "item.givemehats.deerstalker_hat": "猎鹿帽",
-    "item.givemehats.cat_ears": "猫耳",
-    "item.givemehats.fox_ears": "狐耳",
+    "item.givemehats.cat_ears": "猫耳朵",
+    "item.givemehats.fox_ears": "狐耳朵",
     "item.givemehats.electric_mouse_ears": "“电老鼠”耳",
     "item.givemehats.crown": "皇冠",
     "item.givemehats.cowboy_hat": "牛仔帽",
     "item.givemehats.russian_hat": "俄罗斯帽",
     "item.givemehats.strider_hat": "炽足兽圆顶帽",
-    "item.givemehats.woolrus_hat": "海象",
+    "item.givemehats.woolrus_hat": "海象帽",
     "item.givemehats.tater_hat": "土豆仔",
-    "itemGroup.givemehats.hats_tab": "Give Me Hats!"
+    "item.givemehats.bunny_space_helmet": "太空头盔",
+    "item.givemehats.irish_hat": "鬼精灵帽",
+    "item.givemehats.golem_bucket": "傀儡桶",
+    "item.givemehats.jojo_hat": "承太郎帽",
+    "item.givemehats.wolf_ears": "狼耳",
+    "item.givemehats.witch_hat": "巫师帽",
+    "item.givemehats.viking_hat": "维京帽",
+    "item.givemehats.dwarven_hat": "达尔文头盔",
+    "itemGroup.givemehats.hats_tab": "Give Me Hats!",
+  
+    "text.bowler_hat":"被动：快步走...跑！",
+    "text.bunny_ears":"被动：兔子跳",
+    "text.space_helmet":"被动：真空",
+    "text.cat_ears":"潜行时：吓跑苦力怕！",
+    "text.cowboy_hat":"被动：快马加鞭",
+    "text.crown":"被动：贵族",
+    "text.deerstalkerhat":"潜行时：让它们发光吧",
+    "text.emousehat":"攻击时：皮卡皮卡...随机十万伏特",
+    "text.fez":"被动：帅就完事了~",
+    "text.floatinghat":"被动：正如名字所示，缓降！",
+    "text.foxears":"潜行时：把动物冻住！",
+    "text.irishhat":"潜行时：爱尔兰之幸运",
+    "text.taterhat":"被动：太棒了！",
+    "text.russianhat": "被动：战斗民族",
+    "text.sailorhat": "被动：七海之主",
+    "text.santahat": "被动：冰霜行走",
+    "text.slimehat": "被动：弹弹弹！",
+    "text.striderhat": "被动：岩浆里游泳~",
+    "text.topesthat": "被动：最好看的！",
+    "text.tophat": "被动：好看",
+    "text.woolrushat":"被动：咕噜咕噜咕噜咕",
+    "text.golembucket": "攻击时：你有没有劲儿啊？",
+    "text.jojohat": "攻击时：YARE YARE DAZE.mp3",
+    "text.wolf_ears": "攻击时：披着狼皮的羊？",
+    "text.witch_hat": "攻击时：阿瓦达啃大瓜（不是）",
+    "text.viking_hat": "被动：维京人的韧性",
+    "text.dwarven_hat": "被动：深入考古"    
 }
