--- a/src/main/resources/assets/givemehats/lang/ru_ru.json
+++ b/src/main/resources/assets/givemehats/lang/ru_ru.json
@@ -20,6 +20,12 @@
     "item.givemehats.bunny_space_helmet": "Космический шлем",
     "item.givemehats.irish_hat": "Шляпа лепрекона",
     "item.givemehats.santa_hat": "Шапка Санты",
+    "item.givemehats.golem_bucket": "Ведро голема",
+    "item.givemehats.jojo_hat": "Шляпа Джотаро",
+    "item.givemehats.wolf_ears": "Волчьи уши",
+    "item.givemehats.witch_hat": "Шляпа ведьмы",
+    "item.givemehats.viking_hat": "Шлем викингов",
+    "item.givemehats.dwarven_hat": "Шлем дворфов",
     "itemGroup.givemehats.hats_tab": "Give Me Hats!",
 
     "text.bowler_hat":"Пассивный: Быстрая ходьба..Бег",
@@ -42,6 +48,12 @@
     "text.striderhat": "Пассивный: Лавасьен",
     "text.topesthat": "Пассивный: Самый причудливый из всех",
     "text.tophat": "Пассивный: изысканность",
-    "text.woolrushat":"Пассивный: walruswalruswalrus"
+    "text.woolrushat":"Пассивный: walruswalruswalrus",
+    "text.golembucket": "При аттаке: Сможешь ли ты поднять, бро?",
+    "text.jojohat": "При аттаке: YARE YARE DAZE (WIP)",
+    "text.wolf_ears": "При аттаке: Овца в волчьей шкуре?",
+    "text.witch_hat": "При аттаке: бульк бульк, труд и неприятности",
+    "text.viking_hat": "Пассивный: Упорство викингов",
+    "text.dwarven_hat": "Пассивный: Добыча в глубине"
 
 }
