--- a/src/main/resources/assets/givemehats/lang/en_us.json
+++ b/src/main/resources/assets/givemehats/lang/en_us.json
@@ -7,7 +7,7 @@
     "item.givemehats.bunny_ears": "Bunny Ears",
     "item.givemehats.floating_hat": "Floaty Hat",
     "item.givemehats.fez_hat": "The Fez",
-    "item.givemehats.deerstalker_hat": "Deerstalker Hat",
+    "item.givemehats.deer_stalker_hat": "Deerstalker Hat",
     "item.givemehats.cat_ears": "Cat Ears",
     "item.givemehats.fox_ears": "Fox Ears",
     "item.givemehats.santa_hat": "Santa Hat",
@@ -26,6 +26,9 @@
     "item.givemehats.witch_hat": "Witches Brim",
     "item.givemehats.viking_hat": "Viking helmet",
     "item.givemehats.dwarven_hat": "Dwarven Helm",
+    "item.givemehats.hippie_vibes": "Awesome Shades",
+    "item.givemehats.halo": "Halo",
+
     "itemGroup.givemehats.hats_tab": "Give Me Hats!",
 
     "text.bowler_hat":"Passive: Brisk Wal..Run",
@@ -50,10 +53,13 @@
     "text.tophat": "Passive: Fancy",
     "text.woolrushat":"Passive: walruswalruswalrus",
     "text.golembucket": "On attacking: Can you even lift bro?",
-    "text.jojohat": "On attacking: YARE YARE DAZE (WIP)",
+    "text.jojohat": "On attacking: YARE YARE DAZE",
     "text.wolf_ears": "On attacking: A sheep in wolves clothing?",
     "text.witch_hat": "On attacking: bubble bubble, toil and trouble",
     "text.viking_hat": "Passive: Viking Tenacity",
-    "text.dwarven_hat": "Passive: Mining In The Deep"
+    "text.dwarven_hat": "Passive: Mining In The Deep",
+    "text.dusty_hat": "I can't quite tell what it is, I should look closer",
+    "text.hippie_vibes": "on sneak: see the swirls",
+    "text.halo": "on attack: smite the undead"
 
 }
