--- a/src/main/resources/assets/givemehats/lang/en_us.json
+++ b/src/main/resources/assets/givemehats/lang/en_us.json
@@ -29,7 +29,7 @@
     "item.givemehats.hippie_vibes": "Awesome Shades",
     "item.givemehats.halo": "Halo",
 
-    "itemGroup.givemehats.hats_tab": "Give Me Hats!",
+    "itemGroup.givemehats_tab": "Give Me Hats!",
 
     "text.bowler_hat":"Passive: Brisk Wal..Run",
     "text.bunny_ears":"Passive: Bunny Hop",
