--- a/src/main/resources/assets/givemehats/lang/ru_ru.json
+++ b/src/main/resources/assets/givemehats/lang/ru_ru.json
@@ -20,7 +20,7 @@
     "item.givemehats.bunny_space_helmet": "Космический шлем",
     "item.givemehats.irish_hat": "Шляпа лепрекона",
     "item.givemehats.santa_hat": "Шапка Санты",
-    "itemGroup.givemehats.hats_tab": "Give Me Hats!",
+    "itemGroup.givemehats_tab": "Give Me Hats!",
 
     "text.bowler_hat":"Пассивный: Быстрая ходьба..Бег",
     "text.bunny_ears":"Пассивный: Bunny Hop",
