--- a/src/main/resources/assets/givemehats/lang/uk_ua.json
+++ b/src/main/resources/assets/givemehats/lang/uk_ua.json
@@ -20,7 +20,7 @@
   "item.givemehats.bunny_space_helmet": "Космічний шолом",
   "item.givemehats.irish_hat": "Шляпа лепрекона",
   "item.givemehats.santa_hat": "Шапка Санти",
-  "itemGroup.givemehats.hats_tab": "Give Me Hats!",
+  "itemGroup.givemehats_tab": "Give Me Hats!",
 
   "text.bowler_hat":"Пасивний: Швидка ходьба..Біг",
   "text.bunny_ears":"Пасивний: Bunny Hop",
