--- a/src/main/resources/assets/givemehats/lang/zh_cn.json
+++ b/src/main/resources/assets/givemehats/lang/zh_cn.json
@@ -17,5 +17,5 @@
     "item.givemehats.strider_hat": "炽足兽圆顶帽",
     "item.givemehats.woolrus_hat": "海象",
     "item.givemehats.tater_hat": "土豆仔",
-    "itemGroup.givemehats.hats_tab": "Give Me Hats!"
+    "itemGroup.givemehats_tab": "Give Me Hats!"
 }
